--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.application.name= booking-service
+spring.application.name= User-Service
 eureka.client.service-url.defaultzone=localhost:8761/eureka
 eureka.client.register-with-eureka=true
-server.port=8082
-
+server.port=8083
