API for Bookings

--- a/booking-service/src/main/resources/application.properties
+++ b/booking-service/src/main/resources/application.properties
@@ -2,4 +2,10 @@ spring.application.name= booking-service
 eureka.client.service-url.defaultzone=localhost:8761/eureka
 eureka.client.register-with-eureka=true
 server.port=8082
+spring.h2.console.path=/h2
+spring.h2.console.enabled= true
+spring.jpa.show-sql=true
+spring.jpa.database=h2
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
 
